<resources>
    <string name="app_name">YetAnotherTMDBApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="percent">$d%</string>
    <string name="user_score">User\nScore</string>
    <string name="overview">Overview</string>
    <string name="retry">Retry</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
</resources>